fix bottom article going off screen

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+$body-padding: 70px;
 * {
   font-family: 'Terminal';
 }
@@ -21,11 +22,18 @@
 }
 
 .bottom {
-  min-height: calc(100vh - 100px);
-  padding: 30px;
+  max-height: calc(100vh - 100px - (2 * $body-padding));
+  padding: $body-padding;
+  overflow: hidden;
 }
 
-  
+.consoleText {
+  border: none;
+  outline: none;
+  position: absolute;
+  height: 98px;
+  width: 50%;
+}
 
 @media only screen and (max-width: 768px){
   #ribbon {
